AutoPilot Release Notes

Version 1.0-300 vom 24.09.2023

 -Deutsch
    - Update Bootstrap Framework auf 5.3.2
	- Update Bootstrap JavaScript auf 5.3.2
    - Update Bootsrap Icons auf 1.11.1

 -English
    - Update Bootstrap Framework to 5.3.2
	- Update Bootstrap JavaScript to 5.3.2
    - Update Bootsrap Icons auf 1.11.1


Version 1.0-200 vom 16.09.2023

 -Deutsch
    - Funktion zum Erweitern und Einschränken der App-Berechtigung hinzugefügt, damit u.a. Basic Backup Aufträge sowie Hyper Backup Aufgaben verarbeitet werden können.
    - Hinweis: Vorhandene Basic Backup Aufträge sowie Hyper Backup Aufgaben werden erst nach dem Erweitern der App-Berechtigung angezeigt.
    - Über die AutoPilot GUI können nun Basic Backup Aufträge ausgewählt, sowie ein passendes autopilot Script auf einem ext. Datenträger angelegt werden.  
    - Über die AutoPilot GUI können nun Hyper Backup Aufträge ausgewählt, sowie ein passendes autopilot Script auf einem ext. Datenträger angelegt werden.
      Ein ganz großes Dankeschön an @luddi für die Auswertung der Hyper Backup Aufgaben.
    - Über die AutoPilot GUI können nun leere autopilot Scriptdateien auf einem ext. Datenträger erstellt, betrachtet oder gelöscht werden. 
    - Designänderungen und Detailverbesserungen vorgenommen.

 -English
    - Added function to expand and restrict app permissions so that Basic Backup jobs and Hyper Backup tasks can be processed, among others.
    - Note: Existing basic backup jobs and hyper backup tasks will only be displayed after expanding the app permissions.
    - Basic backup jobs can now be selected via the AutoPilot GUI and a suitable autopilot script can be created on an external disk.
    - Hyper backup jobs can now be selected via the AutoPilot GUI and a suitable autopilot script can be created on an external disk.
    - Empty autopilot script files can now be created, viewed or deleted on an external disk via the AutoPilot GUI.
    - Many design changes and detail improvements made.

