@@ -3,7 +3,7 @@ package="AutoPilot"
 displayname="AutoPilot"
 displayname_enu="AutoPilot"
 displayname_ger="AutoPilot"
-version="1.0-200"
+version="1.0-300"
 firmware="7.0-40000"
 os_min_ver="7.0-40000"
 support_center="no"
