@@ -6,11 +6,18 @@ Version 1.0-300 vom 24.09.2023
     - Update Bootstrap Framework auf 5.3.2
 	- Update Bootstrap JavaScript auf 5.3.2
     - Update Bootsrap Icons auf 1.11.1
+    - Wurde der Mountpoint eines externen Datenträgers nach dem Auswerfen nicht korrekt entfernt, hat AutoPilot diesen trotzdem noch angezeigt. Fehler wurde behoben.
+    - Kleinere Fehlerkorrekturen vorgenommen. Danke an @luddinho aus dem GitHub Universum
+    - Designänderungen und Detailverbesserungen vorgenommen.
+ 
 
  -English
     - Update Bootstrap Framework to 5.3.2
 	- Update Bootstrap JavaScript to 5.3.2
     - Update Bootsrap Icons auf 1.11.1
+    - If the mount point of an external disk was not removed correctly after ejecting, AutoPilot still displayed it. Bug has been fixed.
+    - Minor bug fixes made. Thanks to @luddinho from the GitHub universe
+    - Design changes and detail improvements made.
 
 
 Version 1.0-200 vom 16.09.2023
